Mon Jun 28 12:19:05 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * html/Stats/index.shtml:
          No MPC440 xampler build exists

Mon Jun 28 11:32:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * protocols/ace/INet/FTP_Response.h:
     Added missing include.

        * protocols/ace/INet/FTP_Session.cpp:
     Fixed truncate warning.

Mon Jun 28 10:37:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * protocols/ace/INet/FTP_Request.h:
        * protocols/ace/INet/FTP_Response.h:
          Added missing inline includes.

Mon Jun 28 09:53:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * protocols/ace/INet/AuthenticationBase.cpp:
        * protocols/ace/INet/AuthenticationBase.h:
        * protocols/ace/INet/AuthenticationBase.inl:
        * protocols/ace/INet/FTP_ClientRequestHandler.cpp:
        * protocols/ace/INet/FTP_ClientRequestHandler.h:
        * protocols/ace/INet/FTP_ClientRequestHandler.inl:
        * protocols/ace/INet/FTP_IOStream.cpp:
        * protocols/ace/INet/FTP_IOStream.h:
        * protocols/ace/INet/FTP_IOStream.inl:
        * protocols/ace/INet/FTP_Request.cpp:
        * protocols/ace/INet/FTP_Request.h:
        * protocols/ace/INet/FTP_Request.inl:
        * protocols/ace/INet/FTP_Response.cpp:
        * protocols/ace/INet/FTP_Response.h:
        * protocols/ace/INet/FTP_Response.inl:
        * protocols/ace/INet/FTP_Session.cpp:
        * protocols/ace/INet/FTP_Session.h:
        * protocols/ace/INet/FTP_Simple_exec.cpp:
        * protocols/ace/INet/FTP_URL.cpp:
        * protocols/ace/INet/FTP_URL.h:
        * protocols/ace/INet/FTP_URL.inl:
        * protocols/ace/INet/INet_Log.cpp:
        * protocols/ace/INet/INet_Log.h:
        * protocols/ace/INet/ConnectionCache.cpp:
        * protocols/ace/INet/HeaderBase.cpp:
        * protocols/ace/INet/HTTP_ClientRequestHandler.cpp:
        * protocols/ace/INet/HTTP_ClientRequestHandler.h:
        * protocols/ace/INet/HTTP_Request.cpp: